// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loading the debugger loads the initial breakpoint state 1`] = `
Object {
  "breakpoint": Object {
    "astLocation": Object {
      "name": undefined,
      "offset": Object {
        "line": 3,
      },
    },
    "condition": null,
    "disabled": false,
    "generatedLocation": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "gen.js",
      "sourceUrl": "http://localhost:8000/gen.js",
    },
    "hidden": false,
    "location": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "magic.js",
      "sourceUrl": "http://localhost:8000/examples/magic.js",
    },
  },
  "previousLocation": null,
}
`;

exports[`loading the debugger loads the initial breakpoint state with a changed file 1`] = `
Object {
  "breakpoint": Object {
    "astLocation": Object {
      "name": undefined,
      "offset": Object {
        "line": 3,
      },
    },
    "condition": null,
    "disabled": false,
    "generatedLocation": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "gen.js",
      "sourceUrl": "http://localhost:8000/gen.js",
    },
    "hidden": false,
    "location": Object {
      "column": undefined,
      "line": 12,
      "sourceId": "magic.js",
      "sourceUrl": "http://localhost:8000/examples/magic.js",
    },
  },
  "previousLocation": null,
}
`;

exports[`reloading debuggee syncs with unchanged source with an existing BP 1`] = `
Object {
  "breakpoint": Object {
    "astLocation": Object {
      "name": undefined,
      "offset": Object {
        "line": 3,
      },
    },
    "condition": null,
    "disabled": false,
    "generatedLocation": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "gen.js",
      "sourceUrl": "http://localhost:8000/gen.js",
    },
    "hidden": false,
    "location": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "magic.js",
      "sourceUrl": "http://localhost:8000/examples/magic.js",
    },
  },
  "previousLocation": null,
}
`;

exports[`reloading debuggee updates a corresponding breakpoint for a changed source 1`] = `
Object {
  "breakpoint": Object {
    "astLocation": Object {
      "name": undefined,
      "offset": Object {
        "line": 3,
      },
    },
    "condition": null,
    "disabled": false,
    "generatedLocation": Object {
      "column": undefined,
      "line": 5,
      "sourceId": "gen.js",
      "sourceUrl": "http://localhost:8000/gen.js",
    },
    "hidden": false,
    "location": Object {
      "column": undefined,
      "line": 3,
      "sourceId": "magic.js",
      "sourceUrl": "http://localhost:8000/magic.js",
    },
  },
  "previousLocation": Object {
    "column": undefined,
    "line": 3,
    "sourceId": "magic.js",
    "sourceUrl": "http://localhost:8000/magic.js",
  },
}
`;
